<resources>
    <string name="app_name">Mobaikar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mobaikar</string>
    <string name="nav_header_subtitle">mgpmobai@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="log_out_user">Log out user</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_about">About</string>
    <string name="menu_demand">Demands</string>
    <string name="menu_history">History</string>
    <string name="menu_bhavan">Bhavan</string>
    <string name="menu_message">Message</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_news">News</string>
    <string name="menu_eibn">Business Network</string>
    <string name="about_para1">There are many versions of the history of East Indians. Some area are hotly debated. Whether we are converts from the 6th century or 15th Century. There is however no debate that we are the original inhabitants of Bombay, Salsette and Thana. There is no dispute of two apostles of Jesus, st. Bartholomew and St. Thomas having come to India and both having preached near Kalyan. While the world recognises South India to be converts of St. Thomas, hardly anyone recognises and accept the fact about the East Indian. There is a perpectual doubt if they “carried on” being christians till the arrival of the Portuguese. The passage cut pasted below held ture for the Christians of South India, it should hold true for the East Indians.</string>
    <string name="about_head1">Who are we?</string>
    <string name="about_head1_para">Mobai Gaothan Panchayat, is an initiative to bring all Gaothans of Bombay (Mumbai) together and fight for our basic rights in One Voice. The aim is to have a panchayat style of functioning. Every village is to have a Sarpanch and a Deputy Sarpanch who works in their individual gaothan (village).</string>
    <string name="about_head2">What do we do?</string>
    <string name="about_head2_para">Many Communities which have come much after the East Indians have a Bhavan of their own . It is ironical that the original community which should have had many bhavans can’t boast of even one to call their own. It is sad that many East Indian Associations do not even have an office, a Bhavan is a far cry.</string>
    <string name="about_head3">Join us</string>
    <string name="about_head3_para">The upkeep of the Mobai House involves high costs and a need for a variety of Gaothan artefacts on display we invite your assistance. Those who have East Indian artefacts can contact us. You may sponsor the same as your family names will be tagged on the specific artefacts or you may also sell the same at a nominal cost. Donations and sponsorships also welcome</string>
    <string name="demand_para1">The Village Residents of Mumbai and Thane District are the Original Inhabitants for centuries. Inspite of having such a long history, we, the Gaothan residents have been neglected and deprived of our basic necessities. There are 189 Gaothans in Mumbai and being the Original Inhabitants of Mumbai, we are united in our demands for our Basic Rights from the administration, as  the true Sons of the Soil.</string>
    <string name="demand_para2">We share a common interest with Koliwadas and Adivasi Padas, and together, we strive to highlight the issues we are facing mainly due to the fact that we have been sidelined by the Government. We envision that we will have a strong unity and together account for no less than 1 million votes.  We put forth our Charter of Demands for your persusal, that you will endeavour to work for the people who elect you, in a just and forthright manner:-</string>
    <string name="demand_head1">Development permissions</string>
    <string name="demand_head1_para">The Gaothans consists of original residents who predominantly Middle class  or Poor.  Most of these are willing to take loans to build for themselves their own houses  provided they are not harassed by the BMC and Police authorities for Bribes. These residents are original inhabitants and with generations living under the same roof there is an urgent need to have a vertical increase in structures and so a SITU (as-it-is-where-it-is) of Ground + 2 in all Villages will surely help meet the immediate need of families.   Few families who find it difficult to develop their homes would prefer redevelopment hence if an FSI of 4 should be granted in the Gaothans. Such right to develop, should be of the individual residents choice and not by force.</string>
    <string name="demand_head2">Special facilities</string>
    <string name="demand_head2_para">Over the past few decades, we, the original inhabitants we have seen all open spaces around our Gaothans allocated to various NGO’s and Trusts (many of them non functional,  many of them who do not even operate in our area, and very many who use these spaces for commercial businesses)  we demand that these open spaces  be confiscated from these organizations and handed over for the welfare of the Gaothan residents. Facilities which could be provided to all the Villages are Recreation, Sports, Libraries and Community Centres.  Our Gaothan WAY(Women And Youth) Project, is one which will work towards Empowering and Encouraging Women and Youth, so that  we can improve the standard of living of the Gaothan residents. Your assistance in terms of funds and allocation of land will help us to go ahead with this initiative.</string>
    <string name="demand_head3">Simplified permissions</string>
    <string name="demand_head3_para">The Gaothan residents have to go through numerous hardships when they apply for permission for Repairs, new constructions, water and sewage line connections. This is mainly because of the various departments involved in the process and these delays are initiated purposely to force our residents into paying bribes. We demand that we are granted these permissions within a stipulated period of time.  The BMC and Police Authorities, cite various legislation and rules to continuously harass us, in a blatant effort to get bribes and turn a “blind eye”. We demand that we should be given written permissions to repair or develop our own houses.</string>
    <string name="demand_head4">Special subsidies</string>
    <string name="demand_head4_para">There are a few passionate Gaothan residents who want to maintain their residence as it is for the futre to see what the Gaothan houses looked like, there by maintaining it as a heritage. We demand that these families should be granted special subsidies for repairs and maintenance of their homes.</string>
    <string name="demand_head5">Better infrastructure</string>
    <string name="demand_head5_para">All the Gaothans are facing  various problems with Water supply, Sewage lines, storm water drains and bylanes. We demand that these basic amenities are provided as per the common needs of the Gaothan residents, at discounted rates. All water pipes (main) connected to the Gaothans are old and too small to even manage the marginal increase in our household  We request you to unconditionally lay bigger pipes which will ensure us a 24 hour  proper water supply and better water pressure.</string>
    <string name="demand_head6">High rise buildings</string>
    <string name="demand_head6_para">A majority of Gaothan homes are tiny structures of one or two floors. However many a times we see towers and sky scrappers surrounding our tiny homes. This will leave very little place for us to breathe. Internationally there is a legislature in place that no permission is to be given for any structure (building) that blocks the sunlight to a house/residence or even open space, with it’s shadow, we demand that such legialature be followed in spirit and that there be a prohibition to construction of tall structures within and in the periphery of the Gaothans</string>
    <string name="demand_head7">SEZ’s, SRA</string>
    <string name="demand_head7_para">A Gaothan is a Village Settlement which has a centuries of history be it political or cultural. The people of the various Gaothans are the original inhabitants of Mumbai, they refuse to be treated at par with illegal residents and encroachments like the slums, hence it is grave injustice when the Gaothans are treated like slums or allocated various Government schemes without the approval of the Gaothan residents. We demand that all SEZ’s, SRA and other schemes be scrapped for the Gaothans and that a special Development Scheme is devised for the Upliftment of the Gaothans, as per the recommendation of the resident local people. We demand that our Villages and Villagers are safe and secure and be protected from the greedy eyes of builders and other anti-social elements. We demand that under no circumstances, should our Gaothans and Gaothan lands be developed by force.</string>
    <string name="demand_head8">Upliftment of Gaothans</string>
    <string name="bhavan_what">What is Mobai Bhavan?</string>
    <string name="bhavan_what_para">The Mobai Bhavan is supposed to be a place where one will go back in time and experience the way things were done by our forefathers in their times. The place will look like a mini East Indian village replete with a tiled house and surroundings consisting of artefacts, bullock cart, fishing boat, a well with pulley to draw water and a cross for prayers. The food mostly cooked in earthen vessels on fire from the choola and ladies dressed traditionally will be present on site to serve you. It is our endeavour to give light music from the Ghumat to get you in mood.</string>
    <string name="bhavan_where">Where is Mobai Bhavan?</string>
    <string name="bhavan_where_para">It is located in Manori at Theresa Villa on the Manori-Gorai Road, about five minutestravel from the Manori Jetty.</string>
    <string name="bhavan_why">Why Mobai Bhavan?</string>
    <string name="bhavan_why_para">Many Communities which have come much after the East Indians have a Bhavan of their own . It is ironical that the original community which should have had many bhavans can’t boast of even one to call their own. It is sad that many East Indian Associations do not even have an office, a Bhavan is a far cry.</string>
    <string name="bhavan_who">Who can avail of the facilities?</string>
    <string name="bhavan_who_para">The Bhavan will be open to anyone who wants to experience the East Indian Food and culture. There will be an Exhibition space where artefacts will be on display .</string>
    <string name="bhavan_when">When can one visit?</string>
    <string name="bhavan_when_para">We plan to have special Sunday Celebrations at the Mobai Bhavan twice a month on the second and third Sundays from 11.00 am to 5.00 pm and the dates will also be announced in the Gaothan Voice. You will have to book your lunch in advance. Families, Groups and Associations can also book for anyday or for an overnight stay at the Mobai Bhavan.</string>
    <string name="bhavan_thanks">Mobai Gaothan Panchayat Thanks Theresa and Family for providing us their property at Manori to be used as the Mobai House, dedicated to the East Indian Community.</string>
</resources>