<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/ic_menu_donate"
            android:title="@string/menu_donate" />
        <item
            android:id="@+id/nav_eibn"
            android:icon="@drawable/ic_menu_eibn"
            android:title="@string/menu_eibn" />
        <item
            android:id="@+id/nav_demand"
            android:icon="@drawable/ic_menu_demand"
            android:title="@string/menu_demand" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_bhavan"
            android:icon="@drawable/ic_menu_bhavan"
            android:title="@string/menu_bhavan" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_menu_message"
            android:title="@string/menu_message" />
        <!--
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
            -->
    </group>
</menu>