<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_nav_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/bottom_nav_news"
        android:icon="@drawable/ic_menu_news"
        android:title="@string/menu_news" />
    <item
        android:id="@+id/bottom_nav_donate"
        android:icon="@drawable/ic_menu_donate"
        android:title="@string/menu_donate" />
    <item
        android:id="@+id/bottom_nav_eibn"
        android:icon="@drawable/ic_menu_eibn"
        android:title="@string/menu_eibn" />
    <item
        android:id="@+id/bottom_nav_message"
        android:icon="@drawable/ic_menu_message"
        android:title="@string/menu_message" />

</menu>