<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation"
    app:startDestination="@+id/bottom_nav_home">

    <fragment
        android:id="@+id/bottom_nav_home"
        android:name="com.example.mobaikar.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/bottom_nav_news"
        android:name="com.example.mobaikar.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />
    <fragment
        android:id="@+id/bottom_nav_donate"
        android:name="com.example.mobaikar.ui.donate.DonateFragment"
        android:label="@string/menu_donate"
        tools:layout="@layout/fragment_donate" />
    <fragment
        android:id="@+id/bottom_nav_eibn"
        android:name="com.example.mobaikar.ui.eibn.EibnFragment"
        android:label="@string/menu_eibn"
        tools:layout="@layout/fragment_eibn" />
    <fragment
        android:id="@+id/bottom_nav_message"
        android:name="com.example.mobaikar.ui.message.MessageFragment"
        android:label="@string/menu_message"
        tools:layout="@layout/fragment_message" />
</navigation>