<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constLayoutDemand"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bhavan.BhavanFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/mobai_bhavan" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textViewbh1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bhavan_what"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textViewbhp1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bhavan_what_para"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textViewbh2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bhavan_where"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textViewbhp2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bhavan_where_para"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textViewbh3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bhavan_why"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textViewbhp3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bhavan_why_para"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textViewbh4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bhavan_who"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textViewbhp4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bhavan_who_para"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textViewbh5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bhavan_when"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textViewbhp5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bhavan_when_para"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textViewbh6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bhavan_thanks"
                        android:textSize="18sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>